import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile

plugins {
  id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion" apply false
}

subprojects {
  apply plugin: 'java-library'
  apply plugin: 'org.jetbrains.kotlin.jvm'

  group = 'org.demoth'
  version = '1.2.0'
  ext.appName = 'cake'

  java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    toolchain {
      languageVersion = JavaLanguageVersion.of(21)
    }
  }

  tasks.withType(JavaCompile).configureEach {
    options.incremental = true
    options.release = 21
  }

  tasks.withType(KotlinJvmCompile).configureEach {
    compilerOptions.jvmTarget.set(JvmTarget.JVM_21)
  }

  dependencies {
    testImplementation(libs.junitJupiterApi)
    testImplementation(libs.junitJupiterParams)
    testRuntimeOnly(libs.junitPlatformLauncher)
    testRuntimeOnly(libs.junitJupiterEngine)
  }

  tasks.withType(Test).configureEach {
    useJUnitPlatform()
  }
}
